minosoft-git: add suggestions of author
* Now client is written in Kotlin
* It works with Java down to 11 (but dev recommend 16)
* And it runs without preview features