@@ -1,2 +1,2 @@
 #!/bin/sh
-exec /usr/bin/java --enable-preview -jar '/usr/share/java/minosoft/minosoft.jar' "$@"
+exec /usr/bin/java -jar '/usr/share/java/minosoft/minosoft.jar' "$@"
